add_library(parser-json STATIC
        Json.h
        JsonDerivative.cpp
        JsonDerivative.h
        JsonEntity.cpp
        JsonEntity.h
        JsonObject.cpp
        JsonObject.h
        JsonValue.cpp
        JsonValue.h
        JsonFactory.cpp
        JsonFactory.h
        JsonArray.cpp
        JsonArray.h
        JsonException.cpp
        JsonException.h
        JsonSyntaxNode.cpp
        JsonSyntaxNode.h
        JsonSyntaxModel.cpp
        JsonSyntaxModel.h
        JsonValueFactory.cpp
        JsonValueFactory.h
        JsonEntityHelper.cpp
        JsonEntityHelper.h
        JsonValueHelper.cpp
        JsonValueHelper.h
)

